# connectedhomeip

examples/rezi-commissioner/: BUILD.gn  main.cpp  rezi-commissioner.gni
examples/rezi-commissioner/commands/discover/: DiscoverCommissionablesCommand.cpp
examples/rezi-commissioner/commands/pairing/: Commands.h
examples/rezi-commissioner/rezi/clusters/: ComplexArgument.h  CustomArgument.h  DataModelLogger.h
examples/rezi-commissioner/rezi/common/: CHIPCommand.cpp  CHIPCommand.h  Command.cpp  Command.h  Commands.cpp
examples/rezi-commissioner/rezi/example/: ExampleCredentialIssuerCommands.h
examples/rezi-commissioner/rezi/pairing/: Commands.h  IssueNOCChainCommand.h  OpenCommissioningWindowCommand.h  PairingCommand.h
examples/rezi-commissioner/rezi/storage/: Commands.h
examples/temperature-measurement-app/linux/: main.cpp
src/controller/: ExamplePersistentStorage.cpp
src/lib/: BUILD.gn
src/protocols/user_directed_commissioning/tests/: BUILD.gn
